[package]
name = "clickhouse-orm"
version = "0.1.0"
edition = "2021"
description = "clickhouse"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-query = "0.28"
reqwest = { version = "0.11", features = ["gzip"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
serde_json = "1"

[dev-dependencies]
tokio = {version = "1", features = ["rt", "macros"]}
dotenv = "0.15"
